# Fast-Base

./: README.md  backup.py  pyproject.toml  sandbox.py  settings.toml
example/: main.py  models.py  repository.py  routes.py  schemas.py  settings.toml
example/migrations/: env.py  init.py
example/migrations/versions/: 2024-04-18_12-33_init_models.py  2024-04-18_14-42_add_users.py
fase/: __init__.py
fase/cli/: main.py
fase/cli/templates/: Dockerfile
fase/core/: app.py  config.py
fase/db/: __init__.py  base.py  connection.py  deps.py  repository.py  routing_session.py  sync_repository.py
fase/users/: __init__.py  deps.py  routes.py  user_manager.py
fase/utils/: cache.py  cbv.py  logging.py  singletone.py  value_holder.py
fastbase/: main.py
fastbase/core/: app.py  config.py  curd.py  db.py
